--- a/_site.yml
+++ b/_site.yml
@@ -2,7 +2,7 @@ name: "GitHubTest"
 title: "KM Test"
 description: |
   KM Test
-output_dir: "docs"
+output_dir: "."
 navbar:
   right:
     - text: "Home"
